unpackaged/main/default/objects/Semester_Based_Subject__c/Semester_Based_Subject__c.object-meta.xml
<CustomObject>
    <label>Semester Based Subject</label>
    <nameField>
        <displayFormat>SEMSUB-{0000}</displayFormat>
        <label>Semester Based Subject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Semester Based Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>