unpackaged/main/default/objects/Semester_Based_Subject__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <referenceTo>Semester__c</referenceTo>
    <relationshipLabel>Semester Based Subjects</relationshipLabel>
    <relationshipName>Semester_Based_Subjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>