unpackaged/main/default/objects/Semester_Based_Subject__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Semester Based Subjects</relationshipLabel>
    <relationshipName>Semester_Based_Subjects</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>